devpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-pod
  namespace: devns
  labels: #to map it with the service
    app: web
    env: dev
spec:
  restartPolicy: OnFailure
  containers:
    - name: apache
      image: ramalja2/eks-basesite
      imagePullPolicy: IfNotPresent
      ports:
        - name: dev-port
          protocol: TCP
          containerPort: 80
      resources:
        requests:
          memory: "50Mi"
          cpu: "100m"
        limits:
          memory: "100Mi"
          cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: devsvc   #service name (it can be any name)
  namespace: devdns
spec:
  type: LoadBalancer
  ports:
    - name: apache
      nodePort: 30002 #nodeport mention the same in SG
      port: 80 #service port
      targetPort: 80 #container port Docker image
      protocol: TCP
  selector:     #mapping to pod
    app: web
    env: dev
